--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
                   </div>
               </div>
               <div class="flex items-center space-x-4">
-                  <a href="#" class="text-gray-800 hover:text-blue-500">Masuk</a>
-                  <a href="#" class="text-gray-800 hover:text-blue-500">Daftar</a>
+                  <a href="sign-in.html" class="text-gray-800 hover:text-blue-500">Masuk</a>
+                  <a href="sign-up.html" class="text-gray-800 hover:text-blue-500">Daftar</a>
                   <a href="#" class="text-gray-800 hover:text-blue-500">Keranjang</a>
               </div>
           </div>
