halaman profil (belum selesai)

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
                   </div>
               </div>
               <div class="flex items-center space-x-4">
+                  <a href="profil.html" class="text-gray-800 hover:text-blue-500">Profil</a>
                   <a href="sign-in.html" class="text-gray-800 hover:text-blue-500">Masuk</a>
                   <a href="sign-up.html" class="text-gray-800 hover:text-blue-500">Daftar</a>
                   <a href="#" class="text-gray-800 hover:text-blue-500">Keranjang</a>
