--- a/src/detail.html
+++ b/src/detail.html
@@ -97,12 +97,12 @@
                 </div>
 
                 <!-- Add to Cart Button -->
-                <button class="w-full bg-amber-500 text-white py-3 rounded-lg hover:bg-blue-700 transition duration-300 mb-4">
+                <button class="w-full bg-amber-500 text-white py-3 rounded-lg hover:bg-amber-600 transition duration-300 mb-4">
                     Tambahkan ke Keranjang
                 </button>
 
                 <!-- Buy Now Button -->
-                <button class="w-full bg-gray-100 border-2 border-amber-500 text-amber-500 py-3 rounded-lg hover:bg-gray-200 transition duration-300">
+                <button class="w-full bg-gray-0 border-2 border-amber-500 text-amber-500 py-3 rounded-lg hover:bg-gray-100 transition duration-300">
                     Beli Sekarang
                 </button>
             </div>
@@ -184,9 +184,9 @@
         <div>
           <h3 class="text-lg font-semibold text-white">Layanan</h3>
           <ul class="mt-2 text-slate-300">
-            <li><a href="#" class="hover:text-blue-500">Bantuan</a></li>
-            <li><a href="#" class="hover:text-blue-500">Panduan Belanja</a></li>
-            <li><a href="#" class="hover:text-blue-500">Kebijakan Privasi</a></li>
+            <li><a href="#" class="hover:text-amber-500">Bantuan</a></li>
+            <li><a href="#" class="hover:text-amber-500">Panduan Belanja</a></li>
+            <li><a href="#" class="hover:text-amber-500">Kebijakan Privasi</a></li>
           </ul>
         </div>
         <div>
