--- a/src/about-us.html
+++ b/src/about-us.html
@@ -164,7 +164,7 @@
                             </svg>
                         </div>
                         <h3 class="text-xl font-semibold mb-2">Kualitas</h3>
-                        <p>Kami hanya menjual produk dengan standar kualitas tertinggi.</p>
+                        <p>Kami berkomitmen menjual produk dengan standar kualitas tinggi.</p>
                     </div>
                     
                     <div class="text-center p-6">
@@ -202,9 +202,9 @@
         <div>
           <h3 class="text-lg font-semibold text-white">Layanan</h3>
           <ul class="mt-2 text-slate-300">
-            <li><a href="#" class="hover:text-blue-500">Bantuan</a></li>
-            <li><a href="#" class="hover:text-blue-500">Panduan Belanja</a></li>
-            <li><a href="#" class="hover:text-blue-500">Kebijakan Privasi</a></li>
+            <li><a href="#" class="hover:text-amber-400">Bantuan</a></li>
+            <li><a href="#" class="hover:text-amber-400">Panduan Belanja</a></li>
+            <li><a href="#" class="hover:text-amber-400">Kebijakan Privasi</a></li>
           </ul>
         </div>
         <div>
