--- a/src/index_guest.html
+++ b/src/index_guest.html
@@ -98,6 +98,151 @@
                   <p class="mt-1 text-black font-bold">Rp 500.000</p>
                   <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
               </div>
+        <!-- Hanya tambahan -->
+            <div class="bg-white rounded-lg shadow-md p-6">
+                <img src="../image/piano2.jpg" alt="Piano Digital" class="w-full h-48 object-cover rounded-lg mx-auto">
+                <h3 class="text-lg text-gray-800 mt-4 truncate">Piano Digital Yamaha PSR S900</h3>
+                <p class="mt-1 text-black font-bold">Rp 10.000.000</p>
+                <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+            </div>
+            <div class="bg-white rounded-lg shadow-md p-6">
+                <img src="../image/drum2.jpg" alt="Drum Set" class="w-full h-48 object-cover rounded-lg mx-auto">
+                <h3 class="text-lg text-gray-800 mt-4 truncate">Drum Set Pearl Export Series</h3>
+                <p class="mt-1 text-black font-bold">Rp 15.000.000</p>
+                <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+            </div>
+            <div class="bg-white rounded-lg shadow-md p-6">
+                <img src="../image/angklung2.jpg" alt="Angklung" class="w-full h-48 object-cover rounded-lg mx-auto">
+                <h3 class="text-lg text-gray-800 mt-4 truncate">Angklung Tradisional Sunda</h3>
+                <p class="mt-1 text-black font-bold">Rp 500.000</p>
+                <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+            </div>
+            <div class="bg-white rounded-lg shadow-md p-6">
+              <img src="../image/piano2.jpg" alt="Piano Digital" class="w-full h-48 object-cover rounded-lg mx-auto">
+              <h3 class="text-lg text-gray-800 mt-4 truncate">Piano Digital Yamaha PSR S900</h3>
+              <p class="mt-1 text-black font-bold">Rp 10.000.000</p>
+              <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+          </div>
+          <div class="bg-white rounded-lg shadow-md p-6">
+              <img src="../image/drum2.jpg" alt="Drum Set" class="w-full h-48 object-cover rounded-lg mx-auto">
+              <h3 class="text-lg text-gray-800 mt-4 truncate">Drum Set Pearl Export Series</h3>
+              <p class="mt-1 text-black font-bold">Rp 15.000.000</p>
+              <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+          </div>
+          <div class="bg-white rounded-lg shadow-md p-6">
+              <img src="../image/angklung2.jpg" alt="Angklung" class="w-full h-48 object-cover rounded-lg mx-auto">
+              <h3 class="text-lg text-gray-800 mt-4 truncate">Angklung Tradisional Sunda</h3>
+              <p class="mt-1 text-black font-bold">Rp 500.000</p>
+              <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+          </div>
+          <div class="bg-white rounded-lg shadow-md p-6">
+            <img src="../image/piano2.jpg" alt="Piano Digital" class="w-full h-48 object-cover rounded-lg mx-auto">
+            <h3 class="text-lg text-gray-800 mt-4 truncate">Piano Digital Yamaha PSR S900</h3>
+            <p class="mt-1 text-black font-bold">Rp 10.000.000</p>
+            <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+        </div>
+        <div class="bg-white rounded-lg shadow-md p-6">
+            <img src="../image/drum2.jpg" alt="Drum Set" class="w-full h-48 object-cover rounded-lg mx-auto">
+            <h3 class="text-lg text-gray-800 mt-4 truncate">Drum Set Pearl Export Series</h3>
+            <p class="mt-1 text-black font-bold">Rp 15.000.000</p>
+            <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+        </div>
+        <div class="bg-white rounded-lg shadow-md p-6">
+            <img src="../image/angklung2.jpg" alt="Angklung" class="w-full h-48 object-cover rounded-lg mx-auto">
+            <h3 class="text-lg text-gray-800 mt-4 truncate">Angklung Tradisional Sunda</h3>
+            <p class="mt-1 text-black font-bold">Rp 500.000</p>
+            <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+        </div>
+                    <div class="bg-white rounded-lg shadow-md p-6">
+                <img src="../image/piano2.jpg" alt="Piano Digital" class="w-full h-48 object-cover rounded-lg mx-auto">
+                <h3 class="text-lg text-gray-800 mt-4 truncate">Piano Digital Yamaha PSR S900</h3>
+                <p class="mt-1 text-black font-bold">Rp 10.000.000</p>
+                <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+            </div>
+            <div class="bg-white rounded-lg shadow-md p-6">
+                <img src="../image/drum2.jpg" alt="Drum Set" class="w-full h-48 object-cover rounded-lg mx-auto">
+                <h3 class="text-lg text-gray-800 mt-4 truncate">Drum Set Pearl Export Series</h3>
+                <p class="mt-1 text-black font-bold">Rp 15.000.000</p>
+                <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+            </div>
+            <div class="bg-white rounded-lg shadow-md p-6">
+                <img src="../image/angklung2.jpg" alt="Angklung" class="w-full h-48 object-cover rounded-lg mx-auto">
+                <h3 class="text-lg text-gray-800 mt-4 truncate">Angklung Tradisional Sunda</h3>
+                <p class="mt-1 text-black font-bold">Rp 500.000</p>
+                <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+            </div>
+            <div class="bg-white rounded-lg shadow-md p-6">
+              <img src="../image/piano2.jpg" alt="Piano Digital" class="w-full h-48 object-cover rounded-lg mx-auto">
+              <h3 class="text-lg text-gray-800 mt-4 truncate">Piano Digital Yamaha PSR S900</h3>
+              <p class="mt-1 text-black font-bold">Rp 10.000.000</p>
+              <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+          </div>
+          <div class="bg-white rounded-lg shadow-md p-6">
+              <img src="../image/drum2.jpg" alt="Drum Set" class="w-full h-48 object-cover rounded-lg mx-auto">
+              <h3 class="text-lg text-gray-800 mt-4 truncate">Drum Set Pearl Export Series</h3>
+              <p class="mt-1 text-black font-bold">Rp 15.000.000</p>
+              <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+          </div>
+          <div class="bg-white rounded-lg shadow-md p-6">
+              <img src="../image/angklung2.jpg" alt="Angklung" class="w-full h-48 object-cover rounded-lg mx-auto">
+              <h3 class="text-lg text-gray-800 mt-4 truncate">Angklung Tradisional Sunda</h3>
+              <p class="mt-1 text-black font-bold">Rp 500.000</p>
+              <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+          </div>
+                      <div class="bg-white rounded-lg shadow-md p-6">
+                <img src="../image/piano2.jpg" alt="Piano Digital" class="w-full h-48 object-cover rounded-lg mx-auto">
+                <h3 class="text-lg text-gray-800 mt-4 truncate">Piano Digital Yamaha PSR S900</h3>
+                <p class="mt-1 text-black font-bold">Rp 10.000.000</p>
+                <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+            </div>
+            <div class="bg-white rounded-lg shadow-md p-6">
+                <img src="../image/drum2.jpg" alt="Drum Set" class="w-full h-48 object-cover rounded-lg mx-auto">
+                <h3 class="text-lg text-gray-800 mt-4 truncate">Drum Set Pearl Export Series</h3>
+                <p class="mt-1 text-black font-bold">Rp 15.000.000</p>
+                <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+            </div>
+            <div class="bg-white rounded-lg shadow-md p-6">
+                <img src="../image/angklung2.jpg" alt="Angklung" class="w-full h-48 object-cover rounded-lg mx-auto">
+                <h3 class="text-lg text-gray-800 mt-4 truncate">Angklung Tradisional Sunda</h3>
+                <p class="mt-1 text-black font-bold">Rp 500.000</p>
+                <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+            </div>
+                        <div class="bg-white rounded-lg shadow-md p-6">
+                <img src="../image/piano2.jpg" alt="Piano Digital" class="w-full h-48 object-cover rounded-lg mx-auto">
+                <h3 class="text-lg text-gray-800 mt-4 truncate">Piano Digital Yamaha PSR S900</h3>
+                <p class="mt-1 text-black font-bold">Rp 10.000.000</p>
+                <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+            </div>
+            <div class="bg-white rounded-lg shadow-md p-6">
+                <img src="../image/drum2.jpg" alt="Drum Set" class="w-full h-48 object-cover rounded-lg mx-auto">
+                <h3 class="text-lg text-gray-800 mt-4 truncate">Drum Set Pearl Export Series</h3>
+                <p class="mt-1 text-black font-bold">Rp 15.000.000</p>
+                <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+            </div>
+            <div class="bg-white rounded-lg shadow-md p-6">
+                <img src="../image/angklung2.jpg" alt="Angklung" class="w-full h-48 object-cover rounded-lg mx-auto">
+                <h3 class="text-lg text-gray-800 mt-4 truncate">Angklung Tradisional Sunda</h3>
+                <p class="mt-1 text-black font-bold">Rp 500.000</p>
+                <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+            </div>
+            <div class="bg-white rounded-lg shadow-md p-6">
+              <img src="../image/piano2.jpg" alt="Piano Digital" class="w-full h-48 object-cover rounded-lg mx-auto">
+              <h3 class="text-lg text-gray-800 mt-4 truncate">Piano Digital Yamaha PSR S900</h3>
+              <p class="mt-1 text-black font-bold">Rp 10.000.000</p>
+              <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+          </div>
+          <div class="bg-white rounded-lg shadow-md p-6">
+              <img src="../image/drum2.jpg" alt="Drum Set" class="w-full h-48 object-cover rounded-lg mx-auto">
+              <h3 class="text-lg text-gray-800 mt-4 truncate">Drum Set Pearl Export Series</h3>
+              <p class="mt-1 text-black font-bold">Rp 15.000.000</p>
+              <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+          </div>
+          <div class="bg-white rounded-lg shadow-md p-6">
+              <img src="../image/angklung2.jpg" alt="Angklung" class="w-full h-48 object-cover rounded-lg mx-auto">
+              <h3 class="text-lg text-gray-800 mt-4 truncate">Angklung Tradisional Sunda</h3>
+              <p class="mt-1 text-black font-bold">Rp 500.000</p>
+              <button class="mt-4 px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+          </div>
           </div>
         </div>
 
