--- a/src/sign-in.html
+++ b/src/sign-in.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
-    <link href="./output.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
     <!-- Main Container -->
@@ -17,7 +17,7 @@
 
                 <!-- Social Login -->
                 <div class="mb-8">
-                    <p class="text-gray-600 mb-4">Masuk menggunakan akun media sosial</p>
+                    <p class="text-gray-600 mb-4">Masuk menggunakan akun:</p>
                     <button class="w-full flex items-center justify-center gap-2 bg-gray-100 text-gray-700 py-3 rounded-lg 
                               shadow-md hover:shadow-lg transition duration-300">
                         <svg class="w-5 h-5" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -41,15 +41,15 @@
                 <form class="space-y-6">
                     <div>
                         <input type="email" placeholder="Email" class="w-full px-4 py-3 bg-gray-50 rounded-lg shadow-sm 
-                                  focus:outline-none focus:ring-2 focus:ring-blue-500">
+                                  focus:outline-none focus:ring-2 focus:ring-amber-400">
                     </div>
                     
                     <div>
                         <input type="password" placeholder="Password" class="w-full px-4 py-3 bg-gray-50 rounded-lg shadow-sm 
-                                  focus:outline-none focus:ring-2 focus:ring-blue-500">
+                                  focus:outline-none focus:ring-2 focus:ring-amber-400">
                     </div>
 
-                    <button class="w-full bg-blue-600 text-white py-3 rounded-lg shadow-md hover:bg-blue-700 
+                    <button type="button" onclick="window.location.href='index.html'" class="w-full bg-amber-400 text-white py-3 rounded-lg shadow-md hover:bg-amber-500 
                               transition duration-300">
                         Sign In
                     </button>
@@ -57,13 +57,13 @@
             </div>
         </div>
 
-        <!-- Right Section (Blue Background with Sign Up Button) -->
-        <div class="w-full lg:w-1/3 bg-blue-600 flex items-center justify-center p-8 lg:p-0">
+        <!-- Right Section (Background with Sign Up Button) -->
+        <div class="w-full lg:w-1/3 bg-amber-400 flex items-center justify-center p-8 lg:p-0">
             <div class="text-center">
                 <h2 class="text-3xl font-bold text-white mb-6">Halo, Kawan!</h2>
-                <p class="text-gray-200 mb-8">Masukkan detail pribadimu dan mulai perjalanan seru bersama kami!</p>
+                <p class="text-white mb-8">Masukkan detail pribadimu dan mulai perjalanan seru bersama kami!</p>
                 <a href="sign-up.html" class="px-8 py-3 bg-transparent border-2 border-white text-white 
-                          rounded-full hover:bg-white hover:text-blue-600 transition duration-300">
+                          rounded-full hover:bg-white hover:text-amber-400 transition duration-300">
                     Sign Up
                 </a>
             </div>
