--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -10,12 +10,12 @@
     <!-- Main Container -->
     <div class="min-h-screen flex flex-col md:flex-row">
         <!-- Left Section (Blue Background with Sign In Button) -->
-        <div class="w-full md:w-1/3 bg-blue-600 flex items-center justify-center order-2 md:order-1">
+        <div class="w-full md:w-1/3 bg-amber-400 flex items-center justify-center order-2 md:order-1">
             <div class="text-center p-8">
                 <h2 class="text-3xl font-bold text-white mb-6">Selamat Datang Kembali!</h2>
-                <p class="text-gray-200 mb-8">Agar tetap terhubung dengan kami, silakan login dengan info pribadimu!</p>
+                <p class="text-white mb-8">Agar tetap terhubung dengan kami, silakan login dengan info pribadimu!</p>
                 <a href="sign-in.html" class="px-8 py-3 bg-transparent border-2 border-white text-white 
-                          rounded-full hover:bg-white hover:text-blue-600 transition duration-300">
+                          rounded-full hover:bg-white hover:text-amber-400 transition duration-300">
                     Sign In
                 </a>
             </div>
@@ -29,7 +29,7 @@
 
                 <!-- Social Sign Up -->
                 <div class="mb-8">
-                    <p class="text-gray-600 mb-4">Buat menggunakan akun media sosial</p>
+                    <p class="text-gray-600 mb-4">Buat menggunakan akun:</p>
                     <button class="w-full flex items-center justify-center gap-2 bg-gray-100 text-gray-700 py-3 rounded-lg 
                               shadow-md hover:shadow-lg transition duration-300">
                         <svg class="w-5 h-5" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -53,33 +53,33 @@
                 <form class="space-y-6">
                     <div>
                         <input type="text" placeholder="Name" class="w-full px-4 py-3 bg-gray-50 rounded-lg shadow-sm 
-                                  focus:outline-none focus:ring-2 focus:ring-blue-500">
+                                  focus:outline-none focus:ring-2 focus:ring-amber-400">
                     </div>
 
                     <div>
                         <input type="text" placeholder="Username" class="w-full px-4 py-3 bg-gray-50 rounded-lg shadow-sm 
-                                  focus:outline-none focus:ring-2 focus:ring-blue-500">
+                                  focus:outline-none focus:ring-2 focus:ring-amber-400">
                     </div>
 
                     <div>
                         <input type="email" placeholder="Email" class="w-full px-4 py-3 bg-gray-50 rounded-lg shadow-sm 
-                                  focus:outline-none focus:ring-2 focus:ring-blue-500">
+                                  focus:outline-none focus:ring-2 focus:ring-amber-400">
                     </div>
                     
                     <div>
                         <input type="password" placeholder="Password" class="w-full px-4 py-3 bg-gray-50 rounded-lg shadow-sm 
-                                  focus:outline-none focus:ring-2 focus:ring-blue-500">
+                                  focus:outline-none focus:ring-2 focus:ring-amber-400">
                     </div>
 
                     <div class="flex items-center">
-                        <input type="checkbox" class="w-4 h-4 text-blue-600 focus:ring-blue-500">
+                        <input type="checkbox" class="w-4 h-4 text-amber-400 focus:ring-amber-400">
                         <span class="ml-2 text-gray-600">
                             I have read the 
-                            <a href="#" class="text-blue-600 hover:underline">Terms & Conditions</a>
+                            <a href="#" class="text-amber-400 hover:underline">Terms & Conditions</a>
                         </span>
                     </div>
 
-                    <button class="w-full bg-blue-600 text-white py-3 rounded-lg shadow-md hover:bg-blue-700 
+                    <button class="w-full bg-amber-400 text-white py-3 rounded-lg shadow-md hover:bg-blue-700 
                               transition duration-300">
                         Sign Up
                     </button>
