--- a/src/cart.html
+++ b/src/cart.html
@@ -13,7 +13,7 @@
   <nav class="bg-white shadow-md">
     <div class="container mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between items-center h-16">
-        <a href="index.html" class="text-2xl font-bold text-gray-800">Toko Alat Musik</a>
+        <a href="index_guest.html" class="text-2xl font-bold text-gray-800">Toko Alat Musik</a>
         <div class="flex-1 mx-4 max-w-lg">
           <div class="relative">
             <input type="text" placeholder="Cari alat musik..." class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400" />
