--- a/src/index_guest.html
+++ b/src/index_guest.html
@@ -13,7 +13,7 @@
       <div class="container mx-auto px-4 sm:px-6 lg:px-8">
           <div class="flex justify-between items-center h-16">
               <div class="flex items-center">
-                  <a href="#" class="text-2xl font-bold text-gray-800">Toko Alat Musik</a>
+                  <a href="index_guest.html" class="text-2xl font-bold text-gray-800">Toko Alat Musik</a>
               </div>
               <div class="flex-1 mx-4 max-w-lg">
                   <div class="relative">
@@ -258,8 +258,8 @@
           <h3 class="text-lg font-semibold text-white">Layanan</h3>
           <ul class="mt-2 text-slate-300">
             <li><a href="#" class="hover:text-blue-500">Bantuan</a></li>
-            <li><a href="#" class="hover:text-blue-500">Panduan Belanja</a></li>
-            <li><a href="#" class="hover:text-blue-500">Kebijakan Privasi</a></li>
+            <li><a href="term.html" class="hover:text-blue-500">Panduan Belanja</a></li>
+            <li><a href="privacy.html" class="hover:text-blue-500">Kebijakan Privasi</a></li>
           </ul>
         </div>
         <div>
