--- a/src/searchpage.html
+++ b/src/searchpage.html
@@ -13,7 +13,7 @@
       <div class="container mx-auto px-4 sm:px-6 lg:px-8">
           <div class="flex justify-between items-center h-16">
               <div class="flex items-center">
-                  <a href="#" class="text-2xl font-bold text-gray-800">Toko Alat Musik</a>
+                  <a href="index_guest.html" class="text-2xl font-bold text-gray-800">Toko Alat Musik</a>
               </div>
               <div class="flex-1 mx-4 max-w-lg">
                   <div class="relative">
