--- a/src/dashboard/orders.html
+++ b/src/dashboard/orders.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Orders - AdminHub</title>
+    <title>Orders - Panel Admin</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
@@ -15,8 +15,8 @@
       <!-- Sidebar -->
       <aside id="sidebar" class="w-72 bg-gray-50 p-4 shadow-md">
         <div class="flex items-center mb-10">
-          <i class="bx bxs-smile text-amber-400 text-2xl mr-2"></i>
-          <span class="text-2xl font-bold text-amber-400">AdminHub</span>
+          
+          <span class="text-2xl font-bold text-amber-400">Panel Admin</span>
         </div>
         <nav>
           <ul class="space-y-2">
@@ -134,8 +134,8 @@
                   <td>Rp 20.000</td>
                   <td>
                     <span
-                      class="bg-yellow-500 text-white text-xs px-3 py-1 rounded-full"
-                      >Pending</span
+                      class="bg-yellow-500 text-white text-xs px-2 py-1 rounded-full w-20"
+                      >Menunggu</span
                     >
                   </td>
                   <td class="space-x-2">
@@ -157,7 +157,7 @@
                   <td>Rp 35.000</td>
                   <td>
                     <span
-                      class="bg-green-500 text-white text-xs px-3 py-1 rounded-full"
+                      class="bg-green-500 text-white text-xs px-5 w-20 py-1 rounded-full"
                       >Selesai</span
                     >
                   </td>
