--- a/src/cart.html
+++ b/src/cart.html
@@ -9,27 +9,57 @@
 </head>
 <body class="bg-gray-100 min-h-screen flex flex-col">
 
-  <!-- Navbar -->
-  <nav class="bg-white shadow-md">
-    <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex justify-between items-center h-16">
-        <a href="index_guest.html" class="text-2xl font-bold text-gray-800">Toko Alat Musik</a>
-        <div class="flex-1 mx-4 max-w-lg">
+<!-- Navbar User -->
+<nav class="bg-white shadow-md fixed w-full top-0 z-50">
+  <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="flex justify-between items-center h-16">
+      <!-- Logo -->
+      <div class="flex items-center">
+        <a href="index.html" class="text-2xl font-bold text-gray-800">Toko Alat Musik</a>
+      </div>
+      <!-- Search Bar -->
+      <div class="flex-1 mx-4 max-w-lg">
+        <form action="search.html" method="GET">
           <div class="relative">
-            <input type="text" placeholder="Cari alat musik..." class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400" />
-            <button class="absolute right-0 top-0 mt-2 mr-3 text-gray-500 hover:text-amber-400">
-              <i class="fas fa-search"></i>
+            <input 
+              type="text" 
+              name="query" 
+              placeholder="Cari alat musik..." 
+              class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400" 
+            />
+            <button type="submit" class="absolute right-0 top-0 mt-2 mr-3 text-gray-500 hover:text-amber-400">
+              <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" />
+              </svg>
             </button>
           </div>
-        </div>
-        <div class="flex items-center space-x-4">
-          <a href="sign-in.html" class="text-gray-800 hover:text-amber-400">Masuk</a>
-          <a href="sign-up.html" class="text-gray-800 hover:text-amber-400">Daftar</a>
-          <a href="#" class="text-gray-800 hover:text-amber-400">Keranjang</a>
-        </div>
+        </form>
+      </div>
+      <!-- User Section -->
+      <div class="flex items-center space-x-4">
+        <!-- Icon Chat -->
+        <a href="chat.html" class="text-gray-800 hover:text-amber-400">
+          <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M7 8h10M7 12h6m-6 4h8m5-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v8a2 2 0 002 2h2l4 4 4-4h4a2 2 0 002-2z"/>
+          </svg>
+        </a>
+        <!-- Icon Keranjang -->
+        <a href="cart.html" class="text-gray-800 hover:text-amber-400">
+          <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path d="M3 3h2l.4 2M7 13h10l4-8H5.4" stroke-linecap="round" stroke-linejoin="round" />
+            <circle cx="9" cy="21" r="1" />
+            <circle cx="20" cy="21" r="1" />
+          </svg>
+        </a>
+        <!-- Nama dan Foto Profil -->
+        <a href="profil.html" class="flex items-center space-x-2 group">
+          <span class="text-gray-800 font-medium group-hover:text-amber-400 transition-colors duration-200">Andro Lay</span>
+          <img src="../image/Foto Almamater Andro.png" alt="Profile" class="w-9 h-9 rounded-full object-cover border-2 border-gray-300 group-hover:border-amber-400 transition-colors duration-200" />
+        </a>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- Daftar Produk -->
   <main class="flex-grow container mx-auto px-4 py-8 space-y-4">
@@ -125,14 +155,16 @@
           <span class="text-gray-600">Total Pembayaran</span>
           <span class="font-bold text-amber-400">Rp4.500.000</span>
         </div>
-        <button class="w-full bg-amber-400 text-white py-3 rounded-lg shadow-md hover:bg-amber-500 transition duration-300 mt-4">
-          Beli Sekarang
-        </button>
+        <a href="transaksi.html">
+          <button class="w-full bg-amber-400 text-white py-3 rounded-lg shadow-md hover:bg-amber-500 transition duration-300 mt-4">
+            Belanja Sekarang
+          </button>
+        </a>
       </div>
     </div>
   </main>
 
-  <!-- Footer -->
+<!-- Footer -->
 <footer class="bg-slate-800 shadow-md mt-8">
   <div class="container mx-auto px-6 py-8">
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
@@ -143,9 +175,9 @@
       <div>
         <h3 class="text-lg font-semibold text-white">Layanan</h3>
         <ul class="mt-2 text-slate-300">
-          <li><a href="#" class="hover:text-amber-400">Bantuan</a></li>
-          <li><a href="#" class="hover:text-amber-400">Panduan Belanja</a></li>
-          <li><a href="#" class="hover:text-amber-400">Kebijakan Privasi</a></li>
+          <li><a href="about-us.html" class="hover:text-amber-400">Tentang Kami</a></li>
+          <li><a href="term.html" class="hover:text-amber-400">Panduan Belanja</a></li>
+          <li><a href="privacy.html" class="hover:text-amber-400">Kebijakan Privasi</a></li>
         </ul>
       </div>
       <div>
@@ -158,9 +190,9 @@
       <div>
         <h3 class="text-lg font-semibold text-white">Ikuti Kami</h3>
         <div class="mt-2 flex space-x-4">
-          <a href="#" class="text-slate-300 hover:text-amber-400">Facebook</a>
-          <a href="#" class="text-slate-300 hover:text-amber-400">Twitter</a>
-          <a href="#" class="text-slate-300 hover:text-amber-400">Instagram</a>
+          <a href="https://facebook.com" class="text-slate-300 hover:text-amber-400">Facebook</a>
+          <a href="https://twitter.com" class="text-slate-300 hover:text-amber-400">Twitter</a>
+          <a href="https://instagram.com" class="text-slate-300 hover:text-amber-400">Instagram</a>            
         </div>
       </div>
     </div>
