--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AdminHub Tailwind</title>
+    <title>Panel Admin Tailwind</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
@@ -18,8 +18,7 @@
         class="w-72 bg-gray-50 min-h-screen p-4 transition-all duration-300"
       >
         <div class="flex items-center mb-10">
-          <i class="bx bxs-smile text-amber-400 text-2xl mr-2"></i>
-          <span class="text-2xl font-bold text-amber-400">AdminHub</span>
+          <span class="text-2xl font-bold text-amber-400">Panel Admin</span>
         </div>
         <nav>
           <ul id="side-menu" class="space-y-2">
@@ -149,14 +148,14 @@
               <i class="bx bxs-cart text-3xl text-yellow-500 mr-4"></i>
               <div>
                 <h3 class="text-xl font-bold">230</h3>
-                <p>New Orders</p>
+                <p>Orderan Terbaru</p>
               </div>
             </div>
             <div class="flex items-center bg-white p-4 rounded shadow">
               <i class="bx bxs-dollar-circle text-3xl text-orange-500 mr-4"></i>
               <div>
-                <h3 class="text-xl font-bold">$12,540</h3>
-                <p>Total Transactions</p>
+                <h3 class="text-xl font-bold">Rp123,345,540</h3>
+                <p>Total Transaksi</p>
               </div>
             </div>
           </div>
@@ -164,7 +163,7 @@
           <!-- Recent Orders Section -->
           <div class="bg-white p-4 rounded shadow">
             <div class="flex justify-between items-center mb-4">
-              <h3 class="text-lg font-semibold">Recent Orders</h3>
+              <h3 class="text-lg font-semibold">Orderan terbaru</h3>
               <div class="space-x-2 text-gray-500">
                 <i class="bx bx-search"></i>
                 <i class="bx bx-filter"></i>
@@ -174,7 +173,7 @@
               <thead>
                 <tr class="text-gray-600 border-b">
                   <th class="py-2">User</th>
-                  <th>Date Order</th>
+                  <th>Tanggal Orderan</th>
                   <th>Status</th>
                 </tr>
               </thead>
