--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -9,7 +9,7 @@
 <body class="bg-gray-100">
     <!-- Main Container -->
     <div class="min-h-screen flex flex-col md:flex-row">
-        <!-- Left Section (Blue Background with Sign In Button) -->
+        <!-- Left Section -->
         <div class="w-full md:w-1/3 bg-amber-400 flex items-center justify-center order-2 md:order-1">
             <div class="text-center p-8">
                 <h2 class="text-3xl font-bold text-white mb-6">Selamat Datang Kembali!</h2>
@@ -79,7 +79,7 @@
                         </span>
                     </div>
 
-                    <button class="w-full bg-amber-400 text-white py-3 rounded-lg shadow-md hover:bg-blue-700 
+                    <button class="w-full bg-amber-400 text-white py-3 rounded-lg shadow-md hover:bg-amber-600 
                               transition duration-300">
                         Sign Up
                     </button>
