--- a/src/term.html
+++ b/src/term.html
@@ -124,9 +124,9 @@
         <div>
           <h3 class="text-lg font-semibold text-white">Layanan</h3>
           <ul class="mt-2 text-slate-300">
-            <li><a href="#" class="hover:text-blue-500">Bantuan</a></li>
-            <li><a href="#" class="hover:text-blue-500">Panduan Belanja</a></li>
-            <li><a href="#" class="hover:text-blue-500">Kebijakan Privasi</a></li>
+            <li><a href="about-us.html" class="hover:text-amber-400">Tentang Kami</a></li>
+            <li><a href="term.html" class="hover:text-amber-400">Panduan Belanja</a></li>
+            <li><a href="privacy.html" class="hover:text-amber-400">Kebijakan Privasi</a></li>
           </ul>
         </div>
         <div>
@@ -139,14 +139,13 @@
         <div>
           <h3 class="text-lg font-semibold text-white">Ikuti Kami</h3>
           <div class="mt-2 flex space-x-4">
-            <a href="#" class="text-slate-300 hover:text-amber-400">Facebook</a>
-            <a href="#" class="text-slate-300 hover:text-amber-400">Twitter</a>
-            <a href="#" class="text-slate-300 hover:text-amber-400">Instagram</a>
+            <a href="https://facebook.com" class="text-slate-300 hover:text-amber-400">Facebook</a>
+            <a href="https://twitter.com" class="text-slate-300 hover:text-amber-400">Twitter</a>
+            <a href="https://instagram.com" class="text-slate-300 hover:text-amber-400">Instagram</a>            
           </div>
         </div>
       </div>
     </div>
 </footer>
-
 </body>
 </html>
