--- a/src/index_guest.html
+++ b/src/index_guest.html
@@ -88,7 +88,7 @@
             </div>
             </a>
             <!-- Tombol Tambahkan tetap di luar <a> -->
-            <button class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
+            <button onclick = "window.location.href='detail_guest.html'" class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
             Tambahkan
             </button>
         </div>
@@ -107,7 +107,7 @@
             </div>
             </a>
             <!-- Tombol Tambahkan tetap di luar <a> -->
-            <button class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
+            <button onclick = "window.location.href='detail_guest.html'" class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
             Tambahkan
             </button>
         </div>
