--- a/src/detail.html
+++ b/src/detail.html
@@ -100,10 +100,23 @@
                         </div>
                     </div>
                 </div>
+                <div class="flex flex-col mt-1 text-xs text-gray-500 space-y-0.5">
+                  <span class="text-yellow-500">★ 4.6 | 20 Terjual</span>
+                </div>
+                <div>
+                  <h3 class="text-lg font-semibold text-gray-700">Ulasan</h3>
+                  <div  class="flex items-center space-x-2 group">
+                    <img src="../image/Naftali.jpg" alt="Profile" class="w-9 h-9 rounded-full object-cover border-2 border-gray-300 group-hover:border-amber-400 transition-colors duration-200" />
+                    <span class="text-gray-800 font-medium">Naftali</span>
+                  </div>
+                  <div>
+                  <p class="text-gray-600">"Gitar ini sangat nyaman dimainkan dan suaranya luar biasa!"</p>
+                  </div>
+                </div>  
             </div>
 
             <!-- Bagian Kanan: Pembelian -->
-            <div class="w-full md:w-1/3 p-6 bg-gray-50">
+            <div class="container mx-auto pt-12 w-full md:w-1/3 p-6 bg-gray-50">
                 <!-- Quantity Selector -->
                 <div class="mb-6">
                     <label for="quantity" class="block text-gray-700 mb-2">Jumlah:</label>
