--- a/src/detail_guest.html
+++ b/src/detail_guest.html
@@ -124,7 +124,7 @@
                 </div>
 
                 <!-- Add to Cart Button -->
-                <button class="w-full bg-amber-400 text-white py-3 rounded-lg hover:bg-amber-500 transition duration-300 mb-4">
+                <button onclick="openModal('Jenis Kelamin', 'jenis-kelamin-value', 'select', ['Laki-laki', 'Perempuan'])" class="w-full bg-amber-400 text-white py-3 rounded-lg hover:bg-amber-500 transition duration-300 mb-4">
                     Tambahkan ke Keranjang
                 </button>
 
