--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@
             </div>
             </a>
             <!-- Tombol Tambahkan tetap di luar <a> -->
-            <button class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
+            <button onclick = "window.location.href='detail.html'" class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
             Tambahkan
             </button>
         </div>
@@ -139,7 +139,7 @@
             </div>
             </a>
             <!-- Tombol Tambahkan tetap di luar <a> -->
-            <button class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
+            <button onclick = "window.location.href='detail.html'" class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
             Tambahkan
             </button>
         </div>
