--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -99,7 +99,7 @@
               >
             </a>
             <img
-              src="img/people.png"
+              src="../../image/Foto Almamater Andro.png"
               class="w-9 h-9 rounded-full"
               alt="Profile"
             />
