--- a/src/dashboard/users.html
+++ b/src/dashboard/users.html
@@ -90,7 +90,7 @@
               >
             </a>
             <img
-              src="img/people.png"
+              src="../../image/Foto Almamater Andro.png"
               class="w-9 h-9 rounded-full"
               alt="Profile"
             />
