--- a/src/detail.html
+++ b/src/detail.html
@@ -8,57 +8,8 @@
 </head>
 <body class="bg-gray-100">
 
-<!-- Navbar User -->
-<nav class="bg-white shadow-md fixed w-full top-0 z-50">
-    <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex justify-between items-center h-16">
-        <!-- Logo -->
-        <div class="flex items-center">
-          <a href="index.html" class="text-2xl font-bold text-gray-800">Toko Alat Musik</a>
-        </div>
-        <!-- Search Bar -->
-        <div class="flex-1 mx-4 max-w-lg">
-          <form action="search.html" method="GET">
-            <div class="relative">
-              <input 
-                type="text" 
-                name="query" 
-                placeholder="Cari alat musik..." 
-                class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400" 
-              />
-              <button type="submit" class="absolute right-0 top-0 mt-2 mr-3 text-gray-500 hover:text-amber-400">
-                <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20">
-                  <path d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" />
-                </svg>
-              </button>
-            </div>
-          </form>
-        </div>
-        <!-- User Section -->
-        <div class="flex items-center space-x-4">
-          <!-- Icon Chat -->
-          <a href="chat.html" class="text-gray-800 hover:text-amber-400">
-            <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M7 8h10M7 12h6m-6 4h8m5-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v8a2 2 0 002 2h2l4 4 4-4h4a2 2 0 002-2z"/>
-            </svg>
-          </a>
-          <!-- Icon Keranjang -->
-          <a href="cart.html" class="text-gray-800 hover:text-amber-400">
-            <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-              <path d="M3 3h2l.4 2M7 13h10l4-8H5.4" stroke-linecap="round" stroke-linejoin="round" />
-              <circle cx="9" cy="21" r="1" />
-              <circle cx="20" cy="21" r="1" />
-            </svg>
-          </a>
-          <!-- Nama dan Foto Profil -->
-          <a href="profil.html" class="flex items-center space-x-2 group">
-            <span class="text-gray-800 font-medium group-hover:text-amber-400 transition-colors duration-200">Andro Lay</span>
-            <img src="../image/Foto Almamater Andro.png" alt="Profile" class="w-9 h-9 rounded-full object-cover border-2 border-gray-300 group-hover:border-amber-400 transition-colors duration-200" />
-          </a>
-        </div>
-      </div>
-    </div>
-  </nav>
+    <!-- Navbar User -->
+    <div id="navbar-placeholder"></div>
   
 
     <!-- Main Container -->
@@ -100,11 +51,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="flex flex-col mt-1 text-xs text-gray-500 space-y-0.5">
-                  <span class="text-yellow-500">★ 4.6 | 20 Terjual</span>
-                </div>
                 <div>
-                  <h3 class="text-lg font-semibold text-gray-700">Ulasan</h3>
+                  <h3 class="text-lg font-semibold text-gray-700 pt-6">Ulasan</h3>
                   <div  class="flex items-center space-x-2 group">
                     <img src="../image/Naftali.jpg" alt="Profile" class="w-9 h-9 rounded-full object-cover border-2 border-gray-300 group-hover:border-amber-400 transition-colors duration-200" />
                     <span class="text-gray-800 font-medium">Naftali</span>
@@ -113,10 +61,11 @@
                   <p class="text-gray-600">"Gitar ini sangat nyaman dimainkan dan suaranya luar biasa!"</p>
                   </div>
                 </div>  
+
             </div>
 
             <!-- Bagian Kanan: Pembelian -->
-            <div class="container mx-auto pt-12 w-full md:w-1/3 p-6 bg-gray-50">
+            <div class="w-full md:w-1/3 p-6 bg-gray-50">
                 <!-- Quantity Selector -->
                 <div class="mb-6">
                     <label for="quantity" class="block text-gray-700 mb-2">Jumlah:</label>
@@ -247,5 +196,29 @@
       </div>
     </div>
 </footer>
+<script>
+  fetch("navbar.html")
+    .then((res) => res.text())
+    .then((data) => {
+      const navbarDiv = document.getElementById("navbar-placeholder");
+      navbarDiv.innerHTML = data;
+
+      // Setelah navbar dimuat, jalankan fungsi toggle
+      attachNavbarEvents();
+    });
+
+  function attachNavbarEvents() {
+    const toggleBtn = document.getElementById("toggleMenu");
+    const mobileMenu = document.getElementById("mobileMenu");
+
+    if (toggleBtn && mobileMenu) {
+      toggleBtn.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
+      });
+    } else {
+      console.warn("Element toggleMenu atau mobileMenu tidak ditemukan");
+    }
+  }
+</script>
 </body>
 </html>
