--- a/src/index_guest.html
+++ b/src/index_guest.html
@@ -88,7 +88,7 @@
             </div>
             </a>
             <!-- Tombol Tambahkan tetap di luar <a> -->
-            <button onclick = "window.location.href='detail_guest.html'" class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
+            <button onclick = "window.location.href='cart.html'"class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
             Tambahkan
             </button>
         </div>
@@ -107,7 +107,7 @@
             </div>
             </a>
             <!-- Tombol Tambahkan tetap di luar <a> -->
-            <button onclick = "window.location.href='detail_guest.html'" class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
+            <button onclick = "window.location.href='cart.html'"class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
             Tambahkan
             </button>
         </div>
@@ -126,7 +126,7 @@
             </div>
             </a>
             <!-- Tombol Tambahkan tetap di luar <a> -->
-            <button class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
+            <button onclick = "window.location.href='cart.html'"class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
             Tambahkan
             </button>
         </div>
@@ -141,7 +141,7 @@
                 <div class="flex flex-col mt-1 text-xs text-gray-500 space-y-0.5">
                     <span class="text-yellow-500">★ 4.6 | 20 Terjual</span>
                 </div>
-                <button class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
+                <button onclick = "window.location.href='cart.html'"class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
                     Tambahkan
                 </button>
             </div>
@@ -156,7 +156,7 @@
                 <div class="flex flex-col mt-1 text-xs text-gray-500 space-y-0.5">
                     <span class="text-yellow-500">★ 4.6 | 20 Terjual</span>
                 </div>
-                <button class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
+                <button onclick = "window.location.href='cart.html'"class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
                     Tambahkan
                 </button>
             </div>
