--- a/src/search.html
+++ b/src/search.html
@@ -8,62 +8,13 @@
 </head>
 <body class="bg-gray-100">
 
-<!-- Navbar User -->
-<nav class="bg-white shadow-md fixed w-full top-0 z-50">
-    <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex justify-between items-center h-16">
-        <!-- Logo -->
-        <div class="flex items-center">
-          <a href="index.html" class="text-2xl font-bold text-gray-800">Toko Alat Musik</a>
-        </div>
-        <!-- Search Bar -->
-        <div class="flex-1 mx-4 max-w-lg">
-          <form action="search.html" method="GET">
-            <div class="relative">
-              <input 
-                type="text" 
-                name="query" 
-                placeholder="Cari alat musik..." 
-                class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400" 
-              />
-              <button type="submit" class="absolute right-0 top-0 mt-2 mr-3 text-gray-500 hover:text-amber-400">
-                <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20">
-                  <path d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" />
-                </svg>
-              </button>
-            </div>
-          </form>
-        </div>
-        <!-- User Section -->
-        <div class="flex items-center space-x-4">
-          <!-- Icon Chat -->
-          <a href="chat.html" class="text-gray-800 hover:text-amber-400">
-            <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M7 8h10M7 12h6m-6 4h8m5-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v8a2 2 0 002 2h2l4 4 4-4h4a2 2 0 002-2z"/>
-            </svg>
-          </a>
-          <!-- Icon Keranjang -->
-          <a href="cart.html" class="text-gray-800 hover:text-amber-400">
-            <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-              <path d="M3 3h2l.4 2M7 13h10l4-8H5.4" stroke-linecap="round" stroke-linejoin="round" />
-              <circle cx="9" cy="21" r="1" />
-              <circle cx="20" cy="21" r="1" />
-            </svg>
-          </a>
-          <!-- Nama dan Foto Profil -->
-          <a href="profil.html" class="flex items-center space-x-2 group">
-            <span class="text-gray-800 font-medium group-hover:text-amber-400 transition-colors duration-200">Andro Lay</span>
-            <img src="../image/Foto Almamater Andro.png" alt="Profile" class="w-9 h-9 rounded-full object-cover border-2 border-gray-300 group-hover:border-amber-400 transition-colors duration-200" />
-          </a>
-        </div>
-      </div>
-    </div>
-  </nav>
+    <!-- Navbar User -->
+    <div id="navbar-placeholder"></div>
 
     <!-- Konten Utama -->
     <div class="container mx-auto px-4 sm:px-6 lg:px-8 mt-20">
         <h2 class="text-lg md:text-xl font-semibold mt-6 mb-4">
-            Hasil pencarian untuk '<span class="text-red-500">gitar listrik</span>'
+            Hasil pencarian untuk '<span class="text-red-500">gitar</span>'
         </h2>
 
         <div class="flex flex-wrap gap-2 mb-6">
@@ -77,75 +28,60 @@
             <!-- Produk Card -->
             <div class="bg-white rounded shadow hover:shadow-md transition p-4 w-full">
                 <div class="relative w-full h-64">
-                    <img src="../image/Fender Starcaster.jpeg" alt="Produk" class="w-full h-full object-cover rounded">
+                    <img src="../image/gitar3.jpg" alt="Produk" class="w-full h-full object-cover rounded">
                 </div>
                 <!-- Konten Produk -->
-                <p class="mt-2 text-sm font-medium line-clamp-2">Gitar Listrik Yamaha</p>
-                <p class="text-red-600 font-bold text-sm mt-1">Rp 1.800.000</p>
+                <p class="mt-2 text-sm font-medium line-clamp-2">Gitar Akustik Squire</p>
+                <p class="text-red-600 font-bold text-sm mt-1">Rp 2.800.000</p>
                 <div class="flex flex-col mt-1 text-xs text-gray-500 space-y-0.5">
                     <span class="text-yellow-500">★ 4.6 | 20 Terjual</span>
                 </div>
-                <button class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
+                <button onclick = "window.location.href='cart.html'"class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
                     Tambahkan
                 </button>
             </div>
 
             <div class="bg-white rounded shadow hover:shadow-md transition p-4 w-full">
                 <div class="relative w-full h-64">
-                    <img src="../image/Fender Starcaster.jpeg" alt="Produk" class="w-full h-full object-cover rounded">
+                    <img src="../image/gitar2.jpg" alt="Produk" class="w-full h-full object-cover rounded">
                 </div>
                 <!-- Konten Produk -->
-                <p class="mt-2 text-sm font-medium line-clamp-2">Gitar Listrik Yamaha</p>
+                <p class="mt-2 text-sm font-medium line-clamp-2">Gitar Yamaha</p>
                 <p class="text-red-600 font-bold text-sm mt-1">Rp 1.800.000</p>
                 <div class="flex flex-col mt-1 text-xs text-gray-500 space-y-0.5">
                     <span class="text-yellow-500">★ 4.6 | 20 Terjual</span>
                 </div>
-                <button class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
+                <button onclick = "window.location.href='cart.html'"class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
                     Tambahkan
                 </button>
             </div>
             
             <div class="bg-white rounded shadow hover:shadow-md transition p-4 w-full">
                 <div class="relative w-full h-64">
-                    <img src="../image/Fender Starcaster.jpeg" alt="Produk" class="w-full h-full object-cover rounded">
+                    <img src="../image/gitar.jpg" alt="Produk" class="w-full h-full object-cover rounded">
                 </div>
                 <!-- Konten Produk -->
-                <p class="mt-2 text-sm font-medium line-clamp-2">Gitar Listrik Yamaha</p>
+                <p class="mt-2 text-sm font-medium line-clamp-2">Gitar</p>
                 <p class="text-red-600 font-bold text-sm mt-1">Rp 1.800.000</p>
                 <div class="flex flex-col mt-1 text-xs text-gray-500 space-y-0.5">
                     <span class="text-yellow-500">★ 4.6 | 20 Terjual</span>
                 </div>
-                <button class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
+                <button onclick = "window.location.href='cart.html'"class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
                     Tambahkan
                 </button>
             </div>
 
             <div class="bg-white rounded shadow hover:shadow-md transition p-4 w-full">
                 <div class="relative w-full h-64">
-                    <img src="../image/Fender Starcaster.jpeg" alt="Produk" class="w-full h-full object-cover rounded">
+                    <img src="../image/gitarlistrik2.jpg" alt="Produk" class="w-full h-full object-cover rounded">
                 </div>
                 <!-- Konten Produk -->
-                <p class="mt-2 text-sm font-medium line-clamp-2">Gitar Listrik Yamaha</p>
-                <p class="text-red-600 font-bold text-sm mt-1">Rp 1.800.000</p>
+                <p class="mt-2 text-sm font-medium line-clamp-2">Gitar Listrik</p>
+                <p class="text-red-600 font-bold text-sm mt-1">Rp 3.800.000</p>
                 <div class="flex flex-col mt-1 text-xs text-gray-500 space-y-0.5">
                     <span class="text-yellow-500">★ 4.6 | 20 Terjual</span>
                 </div>
-                <button class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
-                    Tambahkan
-                </button>
-            </div>
-
-            <div class="bg-white rounded shadow hover:shadow-md transition p-4 w-full">
-                <div class="relative w-full h-64">
-                    <img src="../image/Fender Starcaster.jpeg" alt="Produk" class="w-full h-full object-cover rounded">
-                </div>
-                <!-- Konten Produk -->
-                <p class="mt-2 text-sm font-medium line-clamp-2">Gitar Listrik Yamaha</p>
-                <p class="text-red-600 font-bold text-sm mt-1">Rp 1.800.000</p>
-                <div class="flex flex-col mt-1 text-xs text-gray-500 space-y-0.5">
-                    <span class="text-yellow-500">★ 4.6 | 20 Terjual</span>
-                </div>
-                <button class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
+                <button onclick = "window.location.href='cart.html'"class="mt-2 text-xs bg-amber-400 text-black px-5 py-2 rounded hover:bg-yellow-300">
                     Tambahkan
                 </button>
             </div>
@@ -193,5 +129,31 @@
     </div>
   </div>
 </footer>
+<script>
+  fetch("navbar.html")
+    .then((res) => res.text())
+    .then((data) => {
+      const navbarDiv = document.getElementById("navbar-placeholder");
+      navbarDiv.innerHTML = data;
+
+      // Setelah navbar dimuat, jalankan fungsi toggle
+      attachNavbarEvents();
+    });
+
+  function attachNavbarEvents() {
+    const toggleBtn = document.getElementById("toggleMenu");
+    const mobileMenu = document.getElementById("mobileMenu");
+
+    if (toggleBtn && mobileMenu) {
+      toggleBtn.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
+      });
+    } else {
+      console.warn("Element toggleMenu atau mobileMenu tidak ditemukan");
+    }
+  }
+</script>
+</body>
+</html>
 </body>
 </html>
