--- a/src/about-us.html
+++ b/src/about-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tentang Kami - Toko Alat Musik</title>
+    <title>Tentang Kami - SounDeal</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Animasi fade-in */
@@ -54,8 +54,8 @@
         <!-- Hero Section Tentang Kami -->
         <div class="bg-amber-400 text-white py-16 fade-in">
             <div class="container mx-auto px-6 text-center">
-                <h1 class="text-4xl font-bold mb-4">Tentang Toko Alat Musik Kami</h1>
-                <p class="text-xl max-w-3xl mx-auto">Lebih dari sekadar toko, kami adalah komunitas pecinta musik</p>
+                <h1 class="text-4xl font-bold mb-4">Tentang SounDeal</h1>
+                <p class="text-xl max-w-3xl mx-auto">Lebih dari sekadar toko, kami juga komunitas pecinta musik</p>
             </div>
         </div>
 
@@ -69,7 +69,7 @@
                 </div>
                 <div class="md:w-1/2 fade-in slide-in-right delay-100">
                     <h2 class="text-3xl font-bold text-gray-800 mb-6">Sejarah Kami</h2>
-                    <p class="text-gray-600 mb-4">Toko Alat Musik didirikan pada tahun 2024 oleh sekelompok orang yang ingin menciptakan tempat dimana setiap orang bisa menemukan alat musik berkualitas dengan harga terjangkau.</p>
+                    <p class="text-gray-600 mb-4">SounDeal didirikan pada tahun 2023 oleh sekelompok orang yang ingin menciptakan tempat dimana setiap orang bisa menemukan alat musik berkualitas dengan harga terjangkau.</p>
                     <p class="text-gray-600">Dari sebuah toko kecil di pusat kota, kami telah berkembang menjadi salah satu distributor alat musik terpercaya di Indonesia, melayani ribuan pelanggan dari berbagai kalangan.</p>
                 </div>
             </div>
@@ -206,40 +206,8 @@
         </div>
     </div>
 
-<!-- Footer -->
-<footer class="bg-slate-800 shadow-md mt-8">
-  <div class="container mx-auto px-6 py-8">
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
-      <div>
-        <h3 class="text-lg font-semibold text-white">Tentang Kami</h3>
-        <p class="mt-2 text-slate-300">Toko Alat Musik terbaik dengan kualitas terjamin.</p>
-      </div>
-      <div>
-        <h3 class="text-lg font-semibold text-white">Layanan</h3>
-        <ul class="mt-2 text-slate-300">
-          <li><a href="about-us.html" class="hover:text-amber-400">Tentang Kami</a></li>
-          <li><a href="term.html" class="hover:text-amber-400">Panduan Belanja</a></li>
-          <li><a href="privacy.html" class="hover:text-amber-400">Kebijakan Privasi</a></li>
-        </ul>
-      </div>
-      <div>
-        <h3 class="text-lg font-semibold text-white">Hubungi Kami</h3>
-        <ul class="mt-2 text-slate-300">
-          <li>Email: info@tokomusik.com</li>
-          <li>Telepon: +62123456789</li>
-        </ul>
-      </div>
-      <div>
-        <h3 class="text-lg font-semibold text-white">Ikuti Kami</h3>
-        <div class="mt-2 flex space-x-4">
-          <a href="https://facebook.com" class="text-slate-300 hover:text-amber-400">Facebook</a>
-          <a href="https://twitter.com" class="text-slate-300 hover:text-amber-400">Twitter</a>
-          <a href="https://instagram.com" class="text-slate-300 hover:text-amber-400">Instagram</a>            
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
+  <!-- Footer -->
+  <div id="footer-placeholder"></div>
 
 <script>
     // Intersection Observer untuk animasi scroll
@@ -285,6 +253,26 @@
         console.warn("Element toggleMenu atau mobileMenu tidak ditemukan");
       }
     }
+
+  // Fungsi untuk memuat footer
+  function loadFooter() {
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('footer-placeholder').innerHTML = data;
+      })
+      .catch(error => {
+        console.error('Error loading footer:', error);
+        document.getElementById('footer-placeholder').innerHTML = `
+          <footer class="bg-slate-800 text-white text-center p-4">
+            <p>© ${new Date().getFullYear()} Toko Alat Musik</p>
+          </footer>
+        `;
+      });
+  }
+
+  // Panggil fungsi saat halaman selesai dimuat
+  document.addEventListener('DOMContentLoaded', loadFooter);
 </script>
 
 </body>
