--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,11 @@
           </p>
           <div class="flex justify-center mt-6">
             <button
-              class="px-6 py-2 bg-white text-amber-500 rounded-lg hover:bg-gray-100"
-            >
-              Jelajahi Sekarang
-            </button>
+            onclick="document.getElementById('produk-unggulan').scrollIntoView({ behavior: 'smooth' })"
+            class="px-6 py-2 bg-white text-amber-500 rounded-lg hover:bg-gray-100"
+          >
+            Jelajahi Sekarang
+          </button>
           </div>
         </div>
       </div>
@@ -223,65 +224,8 @@
   </div>
 
   <!-- Footer -->
-    <footer class="bg-slate-800 shadow-md mt-8">
-      <div class="container mx-auto px-6 py-8">
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
-          <div>
-            <h3 class="text-lg font-semibold text-white">Tentang Kami</h3>
-            <p class="mt-2 text-slate-300">
-              Toko Alat Musik terbaik dengan kualitas terjamin.
-            </p>
-          </div>
-          <div>
-            <h3 class="text-lg font-semibold text-white">Layanan</h3>
-            <ul class="mt-2 text-slate-300">
-              <li>
-                <a href="about-us.html" class="hover:text-amber-400"
-                  >Tentang Kami</a
-                >
-              </li>
-              <li>
-                <a href="term.html" class="hover:text-amber-400"
-                  >Panduan Belanja</a
-                >
-              </li>
-              <li>
-                <a href="privacy.html" class="hover:text-amber-400"
-                  >Kebijakan Privasi</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h3 class="text-lg font-semibold text-white">Hubungi Kami</h3>
-            <ul class="mt-2 text-slate-300">
-              <li>Email: info@tokomusik.com</li>
-              <li>Telepon: +62123456789</li>
-            </ul>
-          </div>
-          <div>
-            <h3 class="text-lg font-semibold text-white">Ikuti Kami</h3>
-            <div class="mt-2 flex space-x-4">
-              <a
-                href="https://facebook.com"
-                class="text-slate-300 hover:text-amber-400"
-                >Facebook</a
-              >
-              <a
-                href="https://twitter.com"
-                class="text-slate-300 hover:text-amber-400"
-                >Twitter</a
-              >
-              <a
-                href="https://instagram.com"
-                class="text-slate-300 hover:text-amber-400"
-                >Instagram</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+  <div id="footer-placeholder"></div>
+
     <script>
       fetch("navbar.html")
         .then((res) => res.text())
@@ -305,6 +249,26 @@
           console.warn("Element toggleMenu atau mobileMenu tidak ditemukan");
         }
       }
+      
+        // Footeer
+  function loadFooter() {
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('footer-placeholder').innerHTML = data;
+      })
+      .catch(error => {
+        console.error('Error loading footer:', error);
+        document.getElementById('footer-placeholder').innerHTML = `
+          <footer class="bg-slate-800 text-white text-center p-4">
+            <p>© ${new Date().getFullYear()} Toko Alat Musik</p>
+          </footer>
+        `;
+      });
+  }
+
+  // Panggil fungsi saat halaman selesai dimuat
+  document.addEventListener('DOMContentLoaded', loadFooter);
     </script>
   </body>
 </html>
