--- a/src/navbar.html
+++ b/src/navbar.html
@@ -3,9 +3,9 @@
     <div class="flex justify-between items-center h-16">
       <!-- Logo -->
       <div class="flex items-center">
-        <a href="index.html" class="text-2xl font-bold text-gray-800"
-          >Toko Alat Musik</a
-        >
+        <a href="index.html" class="flex items-center">
+          <img src="../image/SounDeal.svg" alt="SounDeal Logo" class="h-16">
+        </a>
       </div>
 
       <!-- Hamburger Button (Mobile) -->
@@ -30,10 +30,9 @@
       <!-- Menu (Desktop) -->
       <div
         id="navMenu"
-        class="hidden lg:flex items-center flex-1 justify-between"
-      >
-        <!-- Search Bar -->
-        <div class="mx-4 max-w-lg w-full">
+        class="hidden lg:flex items-center flex-1 justify-center">
+        <!-- Search Bar - Dipindahkan ke tengah -->
+        <div class="absolute left-1/2 transform -translate-x-1/2 max-w-lg w-full">
           <form action="search.html" method="GET">
             <div class="relative">
               <input
@@ -56,8 +55,24 @@
           </form>
         </div>
 
-        <!-- User Section -->
-        <div class="flex items-center space-x-4 mt-4 lg:mt-0">
+        <!-- User Section - Tetap di posisi semula -->
+        <div class="flex items-center space-x-4 ml-auto">
+          <!-- Tambahkan ikon status pengiriman di sini -->
+          <a href="status.html" class="text-gray-800 hover:text-amber-400">
+            <svg
+              class="h-6 w-6"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"
+              />
+            </svg>
+          </a>
           <a href="chat.html" class="text-gray-800 hover:text-amber-400">
             <svg
               class="h-6 w-6"
@@ -106,7 +121,7 @@
     </div>
   </div>
 
-  <!-- Menu (Mobile - Toggle) -->
+  <!-- Menu (Mobile - Toggle) - Tambahkan menu status pengiriman -->
   <div
     id="mobileMenu"
     class="lg:hidden hidden px-4 pb-4 pt-4 space-y-6 bg-white"
@@ -120,6 +135,25 @@
       />
     </form>
     <div class="flex flex-col gap-4">
+      <a
+        href="status.html"
+        class="flex items-center gap-2 text-gray-800 hover:text-amber-400"
+      >
+        <svg
+          class="h-5 w-5"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          viewBox="0 0 24 24"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"
+          />
+        </svg>
+        Status Pengiriman
+      </a>
       <a
         href="chat.html"
         class="flex items-center gap-2 text-gray-800 hover:text-amber-400"
