--- a/src/navbar.html
+++ b/src/navbar.html
@@ -32,7 +32,7 @@
         id="navMenu"
         class="hidden lg:flex items-center flex-1 justify-center">
         <!-- Search Bar - Dipindahkan ke tengah -->
-        <div class="absolute left-1/2 transform -translate-x-1/2 max-w-lg w-full">
+        <div class="absolute left-1/2 transform -translate-x-1/2 w-[70%] sm:w-[60%] md:w-[50%] lg:w-[40%] xl:w-[30%]">
           <form action="search.html" method="GET">
             <div class="relative">
               <input
