perubahan pada searchbar di navbar

--- a/src/dashboard/orders.html
+++ b/src/dashboard/orders.html
@@ -85,28 +85,31 @@
       <!-- Main Content -->
       <div class="flex-1">
         <!-- Navbar -->
-        <nav class="flex justify-between items-center bg-gray-50 p-4 shadow">
+        <nav class="flex justify-between items-center bg-gray-50 p-4 shadow relative">
           <i id="toggleSidebar" class="bx bx-menu text-xl cursor-pointer"></i>
-          <form
-            class="flex items-center bg-gray-100 rounded-full overflow-hidden"
-          >
-            <input
-              type="text"
-              class="px-4 py-2 bg-transparent outline-none"
-              placeholder="Search..."
-            />
-            <button class="bg-amber-400 text-white px-4 py-2">
-              <i class="bx bx-search"></i>
-            </button>
-          </form>
+          <div class="relative flex items-center w-full max-w-lg">
+            <form action="search.html" method="GET" class="w-full">
+              <div class="relative">
+                <input
+                  type="text"
+                  name="query"
+                  placeholder="Cari alat musik..."
+                  class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400"
+                />
+                <button
+                  type="submit"
+                  class="absolute right-0 top-0 mt-2 mr-3 text-gray-500 hover:text-amber-400"
+                >
+                  <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20">
+                    <path
+                      d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </form>
+          </div>
           <div class="flex items-center space-x-4">
-            <a href="#" class="relative">
-              <i class="bx bxs-bell text-xl"></i>
-              <span
-                class="absolute -top-2 -right-2 text-xs bg-amber-400 text-white rounded-full w-5 h-5 flex items-center justify-center"
-                >5</span
-              >
-            </a>
             <img
               src="../../image/Foto Almamater Andro.png"
               class="w-9 h-9 rounded-full"
