--- a/src/dashboard/store.html
+++ b/src/dashboard/store.html
@@ -12,7 +12,10 @@
   </head>
   <body class="bg-gray-100 font-sans text-gray-800">
     <!-- Add Product Modal -->
-    <div id="addProductModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
+    <div
+      id="addProductModal"
+      class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50"
+    >
       <div class="bg-white rounded-lg p-6 w-full max-w-md">
         <div class="flex justify-between items-center mb-4">
           <h3 class="text-xl font-bold">Tambah Produk Baru</h3>
@@ -23,30 +26,49 @@
         <form>
           <div class="mb-4">
             <label class="block text-gray-700 mb-2">Gambar Produk</label>
-            <div class="border-2 border-dashed border-gray-300 rounded-lg p-4 text-center">
+            <div
+              class="border-2 border-dashed border-gray-300 rounded-lg p-4 text-center"
+            >
               <i class="bx bx-cloud-upload text-4xl text-gray-400 mb-2"></i>
-              <p class="text-gray-500">Drag & drop gambar atau klik untuk memilih</p>
-              <input type="file" class="hidden" id="productImage">
-              <button type="button" onclick="document.getElementById('productImage').click()" class="mt-2 bg-gray-100 hover:bg-gray-200 px-4 py-2 rounded-lg text-sm">
+              <p class="text-gray-500">
+                Drag & drop gambar atau klik untuk memilih
+              </p>
+              <input type="file" class="hidden" id="productImage" />
+              <button
+                type="button"
+                onclick="document.getElementById('productImage').click()"
+                class="mt-2 bg-gray-100 hover:bg-gray-200 px-4 py-2 rounded-lg text-sm"
+              >
                 Pilih Gambar
               </button>
             </div>
           </div>
           <div class="mb-4">
             <label class="block text-gray-700 mb-2">Nama Produk</label>
-            <input type="text" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400">
+            <input
+              type="text"
+              class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400"
+            />
           </div>
           <div class="mb-4">
             <label class="block text-gray-700 mb-2">Harga</label>
-            <input type="number" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400">
+            <input
+              type="number"
+              class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400"
+            />
           </div>
           <div class="mb-4">
             <label class="block text-gray-700 mb-2">Stok</label>
-            <input type="number" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400">
+            <input
+              type="number"
+              class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400"
+            />
           </div>
           <div class="mb-6">
             <label class="block text-gray-700 mb-2">Kategori</label>
-            <select class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400">
+            <select
+              class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400"
+            >
               <option value="">Pilih Kategori</option>
               <option value="jajanan">Gitar</option>
               <option value="minuman">Keyboard</option>
@@ -55,15 +77,29 @@
             </select>
           </div>
           <div class="flex justify-end space-x-3">
-            <button type="button" id="cancelAdd" class="px-4 py-2 border rounded-lg hover:bg-gray-100">Batal</button>
-            <button type="submit" class="px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Tambahkan</button>
+            <button
+              type="button"
+              id="cancelAdd"
+              class="px-4 py-2 border rounded-lg hover:bg-gray-100"
+            >
+              Batal
+            </button>
+            <button
+              type="submit"
+              class="px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500"
+            >
+              Tambahkan
+            </button>
           </div>
         </form>
       </div>
     </div>
 
     <!-- Edit Product Modal -->
-    <div id="editProductModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
+    <div
+      id="editProductModal"
+      class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50"
+    >
       <div class="bg-white rounded-lg p-6 w-full max-w-md">
         <div class="flex justify-between items-center mb-4">
           <h3 class="text-xl font-bold">Edit Produk</h3>
@@ -74,30 +110,56 @@
         <form>
           <div class="mb-4">
             <label class="block text-gray-700 mb-2">Gambar Produk</label>
-            <div class="border-2 border-dashed border-gray-300 rounded-lg p-4 text-center">
-              <img src="../../image/piano.jpg" alt="Current Product" class="mx-auto mb-2 h-20 object-cover">
-              <p class="text-gray-500">Drag & drop gambar baru atau klik untuk memilih</p>
-              <input type="file" class="hidden" id="editProductImage">
-              <button type="button" onclick="document.getElementById('editProductImage').click()" class="mt-2 bg-gray-100 hover:bg-gray-200 px-4 py-2 rounded-lg text-sm">
+            <div
+              class="border-2 border-dashed border-gray-300 rounded-lg p-4 text-center"
+            >
+              <img
+                src="../../image/piano.jpg"
+                alt="Current Product"
+                class="mx-auto mb-2 h-20 object-cover"
+              />
+              <p class="text-gray-500">
+                Drag & drop gambar baru atau klik untuk memilih
+              </p>
+              <input type="file" class="hidden" id="editProductImage" />
+              <button
+                type="button"
+                onclick="document.getElementById('editProductImage').click()"
+                class="mt-2 bg-gray-100 hover:bg-gray-200 px-4 py-2 rounded-lg text-sm"
+              >
                 Pilih Gambar Baru
               </button>
             </div>
           </div>
           <div class="mb-4">
             <label class="block text-gray-700 mb-2">Nama Produk</label>
-            <input type="text" value="Keyboard Yamaha" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400">
+            <input
+              type="text"
+              value="Keyboard Yamaha"
+              class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400"
+            />
           </div>
           <div class="mb-4">
             <label class="block text-gray-700 mb-2">Harga</label>
-            <input type="number" value="5000000" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400">
+            <input
+              type="number"
+              value="5000000"
+              class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400"
+            />
           </div>
           <div class="mb-4">
             <label class="block text-gray-700 mb-2">Stok</label>
-            <input type="number" value="10" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400">
+            <input
+              type="number"
+              value="10"
+              class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400"
+            />
           </div>
           <div class="mb-6">
             <label class="block text-gray-700 mb-2">Kategori</label>
-            <select class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400">
+            <select
+              class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400"
+            >
               <option value="">Pilih Kategori</option>
               <option value="gitar" selected>Gitar</option>
               <option value="keyboard">Keyboard</option>
@@ -106,29 +168,62 @@
             </select>
           </div>
           <div class="flex justify-end space-x-3">
-            <button type="button" id="cancelEdit" class="px-4 py-2 border rounded-lg hover:bg-gray-100">Batal</button>
-            <button type="submit" class="px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500">Simpan Perubahan</button>
+            <button
+              type="button"
+              id="cancelEdit"
+              class="px-4 py-2 border rounded-lg hover:bg-gray-100"
+            >
+              Batal
+            </button>
+            <button
+              type="submit"
+              class="px-4 py-2 bg-amber-400 text-white rounded-lg hover:bg-amber-500"
+            >
+              Simpan Perubahan
+            </button>
           </div>
         </form>
       </div>
     </div>
 
     <!-- Delete Confirmation Modal -->
-    <div id="deleteProductModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
+    <div
+      id="deleteProductModal"
+      class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50"
+    >
       <div class="bg-white rounded-lg p-6 w-full max-w-md">
         <div class="flex justify-between items-center mb-4">
           <h3 class="text-xl font-bold">Hapus Produk</h3>
-          <button id="closeDeleteModal" class="text-gray-500 hover:text-gray-700">
+          <button
+            id="closeDeleteModal"
+            class="text-gray-500 hover:text-gray-700"
+          >
             <i class="bx bx-x text-2xl"></i>
           </button>
         </div>
         <div class="mb-6">
-          <p class="text-gray-700">Apakah Anda yakin ingin menghapus produk <span class="font-semibold">"Keyboard Yamaha"</span>?</p>
-          <p class="text-red-500 mt-2 text-sm">Aksi ini tidak dapat dibatalkan!</p>
+          <p class="text-gray-700">
+            Apakah Anda yakin ingin menghapus produk
+            <span class="font-semibold">"Keyboard Yamaha"</span>?
+          </p>
+          <p class="text-red-500 mt-2 text-sm">
+            Aksi ini tidak dapat dibatalkan!
+          </p>
         </div>
         <div class="flex justify-end space-x-3">
-          <button type="button" id="cancelDelete" class="px-4 py-2 border rounded-lg hover:bg-gray-100">Batal</button>
-          <button type="button" class="px-4 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600">Hapus Produk</button>
+          <button
+            type="button"
+            id="cancelDelete"
+            class="px-4 py-2 border rounded-lg hover:bg-gray-100"
+          >
+            Batal
+          </button>
+          <button
+            type="button"
+            class="px-4 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600"
+          >
+            Hapus Produk
+          </button>
         </div>
       </div>
     </div>
@@ -181,28 +276,33 @@
       <!-- Main Content -->
       <div class="flex-1">
         <!-- Navbar -->
-        <nav class="flex justify-between items-center bg-gray-50 p-4 shadow">
+        <nav
+          class="flex justify-between items-center bg-gray-50 p-4 shadow relative"
+        >
           <i id="toggleSidebar" class="bx bx-menu text-xl cursor-pointer"></i>
-          <form
-            class="flex items-center bg-gray-100 rounded-full overflow-hidden"
-          >
-            <input
-              type="text"
-              class="px-4 py-2 bg-transparent outline-none"
-              placeholder="Search..."
-            />
-            <button class="bg-amber-400 text-white px-4 py-2">
-              <i class="bx bx-search"></i>
-            </button>
-          </form>
+          <div class="relative flex items-center w-full max-w-lg">
+            <form action="search.html" method="GET" class="w-full">
+              <div class="relative">
+                <input
+                  type="text"
+                  name="query"
+                  placeholder="Cari alat musik..."
+                  class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-amber-400"
+                />
+                <button
+                  type="submit"
+                  class="absolute right-0 top-0 mt-2 mr-3 text-gray-500 hover:text-amber-400"
+                >
+                  <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20">
+                    <path
+                      d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </form>
+          </div>
           <div class="flex items-center space-x-4">
-            <a href="#" class="relative">
-              <i class="bx bxs-bell text-xl"></i>
-              <span
-                class="absolute -top-2 -right-2 text-xs bg-amber-400 text-white rounded-full w-5 h-5 flex items-center justify-center"
-                >3</span
-              >
-            </a>
             <img
               src="../../image/Foto Almamater Andro.png"
               class="w-9 h-9 rounded-full"
@@ -306,82 +406,82 @@
         });
 
       // Modal functionality
-      const addModal = document.getElementById('addProductModal');
-      const editModal = document.getElementById('editProductModal');
-      const deleteModal = document.getElementById('deleteProductModal');
-      
+      const addModal = document.getElementById("addProductModal");
+      const editModal = document.getElementById("editProductModal");
+      const deleteModal = document.getElementById("deleteProductModal");
+
       // Add Product Modal
-      const openAddBtn = document.getElementById('openAddProduct');
-      const closeAddBtn = document.getElementById('closeAddModal');
-      const cancelAddBtn = document.getElementById('cancelAdd');
+      const openAddBtn = document.getElementById("openAddProduct");
+      const closeAddBtn = document.getElementById("closeAddModal");
+      const cancelAddBtn = document.getElementById("cancelAdd");
 
-      openAddBtn.addEventListener('click', () => {
-        addModal.classList.remove('hidden');
+      openAddBtn.addEventListener("click", () => {
+        addModal.classList.remove("hidden");
       });
 
-      closeAddBtn.addEventListener('click', () => {
-        addModal.classList.add('hidden');
+      closeAddBtn.addEventListener("click", () => {
+        addModal.classList.add("hidden");
       });
 
-      cancelAddBtn.addEventListener('click', () => {
-        addModal.classList.add('hidden');
+      cancelAddBtn.addEventListener("click", () => {
+        addModal.classList.add("hidden");
       });
 
       // Edit Product Modal
-      const editButtons = document.querySelectorAll('.edit-btn');
-      const closeEditBtn = document.getElementById('closeEditModal');
-      const cancelEditBtn = document.getElementById('cancelEdit');
+      const editButtons = document.querySelectorAll(".edit-btn");
+      const closeEditBtn = document.getElementById("closeEditModal");
+      const cancelEditBtn = document.getElementById("cancelEdit");
 
-      editButtons.forEach(button => {
-        button.addEventListener('click', () => {
-          const productName = button.getAttribute('data-product');
+      editButtons.forEach((button) => {
+        button.addEventListener("click", () => {
+          const productName = button.getAttribute("data-product");
           // In a real app, you would fetch the product data here
           // For demo, we're just showing the modal with the product name
-          editModal.classList.remove('hidden');
+          editModal.classList.remove("hidden");
         });
       });
 
-      closeEditBtn.addEventListener('click', () => {
-        editModal.classList.add('hidden');
+      closeEditBtn.addEventListener("click", () => {
+        editModal.classList.add("hidden");
       });
 
-      cancelEditBtn.addEventListener('click', () => {
-        editModal.classList.add('hidden');
+      cancelEditBtn.addEventListener("click", () => {
+        editModal.classList.add("hidden");
       });
 
       // Delete Product Modal
-      const deleteButtons = document.querySelectorAll('.delete-btn');
-      const closeDeleteBtn = document.getElementById('closeDeleteModal');
-      const cancelDeleteBtn = document.getElementById('cancelDelete');
+      const deleteButtons = document.querySelectorAll(".delete-btn");
+      const closeDeleteBtn = document.getElementById("closeDeleteModal");
+      const cancelDeleteBtn = document.getElementById("cancelDelete");
 
-      deleteButtons.forEach(button => {
-        button.addEventListener('click', () => {
-          const productName = button.getAttribute('data-product');
+      deleteButtons.forEach((button) => {
+        button.addEventListener("click", () => {
+          const productName = button.getAttribute("data-product");
           // Update the product name in the delete confirmation
-          const deleteText = deleteModal.querySelector('span');
+          const deleteText = deleteModal.querySelector("span");
           deleteText.textContent = `"${productName}"`;
-          deleteModal.classList.remove('hidden');
+          deleteModal.classList.remove("hidden");
         });
       });
 
-      closeDeleteBtn.addEventListener('click', () => {
-        deleteModal.classList.add('hidden');
+      closeDeleteBtn.addEventListener("click", () => {
+        deleteModal.classList.add("hidden");
       });
 
-      cancelDeleteBtn.addEventListener('click', () => {
-        deleteModal.classList.add('hidden');
+      cancelDeleteBtn.addEventListener("click", () => {
+        deleteModal.classList.add("hidden");
       });
 
       // Close modals when clicking outside
-      window.addEventListener('click', (e) => {
+      window.addEventListener("click", (e) => {
         if (e.target === addModal) {
-          addModal.classList.add('hidden');
+          addModal.classList.add("hidden");
         }
         if (e.target === editModal) {
-          editModal.classList.add('hidden');
+          editModal.classList.add("hidden");
         }
         if (e.target === deleteModal) {
-          deleteModal.classList.add('hidden');
+          deleteModal.classList.add("hidden");
         }
       });
     </script>
