--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -134,21 +134,21 @@
             <div class="flex items-center bg-white p-4 rounded shadow">
               <i class="bx bxs-user text-3xl text-amber-500 mr-4"></i>
               <div>
-                <h3 class="text-xl font-bold">1,234</h3>
+                <h3 class="text-xl font-bold">123</h3>
                 <p>Total Users</p>
               </div>
             </div>
             <div class="flex items-center bg-white p-4 rounded shadow">
               <i class="bx bxs-cart text-3xl text-yellow-500 mr-4"></i>
               <div>
-                <h3 class="text-xl font-bold">230</h3>
+                <h3 class="text-xl font-bold">23</h3>
                 <p>Orderan Terbaru</p>
               </div>
             </div>
             <div class="flex items-center bg-white p-4 rounded shadow">
               <i class="bx bxs-dollar-circle text-3xl text-orange-500 mr-4"></i>
               <div>
-                <h3 class="text-xl font-bold">Rp123,345,540</h3>
+                <h3 class="text-xl font-bold">Rp12,345,540</h3>
                 <p>Total Transaksi</p>
               </div>
             </div>
@@ -173,30 +173,26 @@
               </thead>
               <tbody>
                 <tr class="border-b-2 hover:bg-gray-100">
-                  <td class="flex items-center py-2 space-x-2">
-                    <img src="img/people.png" class="w-8 h-8 rounded-full" />
-                    <span>John Doe</span>
+                  <td class="py-2">
+                    <i class="bx bx-user-circle text-2xl text-gray-400"></i>
+                    <span class="ml-3">John Doe</span>
                   </td>
                   <td>01-10-2021</td>
                   <td>
-                    <span
-                      class="bg-yellow-500 text-white text-xs px-4 py-1 rounded-full inline-block w-24 text-center"
-                    >
-                      Completed
+                    <span class="status-badge bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full">
+                      Diterima
                     </span>
                   </td>
                 </tr>
                 <tr class="border-b-2 hover:bg-gray-100">
-                  <td class="flex items-center py-2 space-x-2">
-                    <img src="img/people.png" class="w-8 h-8 rounded-full" />
-                    <span>Jane Smith</span>
+                  <td class="py-2">
+                    <i class="bx bx-user-circle text-2xl text-gray-400"></i>
+                    <span class="ml-3">Jane Smith</span>
                   </td>
                   <td>02-10-2021</td>
                   <td>
-                    <span
-                      class="bg-orange-500 text-white text-xs px-4 py-1 rounded-full inline-block w-24 text-center"
-                    >
-                      Pending
+                    <span class="status-badge bg-purple-100 text-purple-800 text-xs px-3 py-1 rounded-full">
+                      Dikonfirmasi
                     </span>
                   </td>
                 </tr>
